kubernetes/apps/default/filerun/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: filerun
spec:
  parentRefs:
  - name: external-gateway
    namespace: network
  hostnames:
  - "cloud.${SECRET_DOMAIN}"
  rules:
  - backendRefs:
    - name: filerun-app
      port: 80
